--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: ruby
-dist: focal  # Use Ubuntu 20.04
-rvm:
-  - 2.3.8
-before_install:
-  - sudo apt-get update
-install:
-  - gem install bundler
-  - bundle install
-script:
-  - bundle exec rake spec
+dist: focal
+jobs:
+  include:
+    - rvm: 2.3.8
+      before_install:
+        - sudo apt-get update
+        - rvm reinstall 2.3.8 --disable-binary
+      install:
+        - gem install bundler
+        - bundle install
+      script:
+        - bundle exec rake spec
