--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,24 @@
 language: ruby
-dist: bionic  # Use Ubuntu 18.04
-jobs:
-  include:
-    - rvm: 2.3.8
-      group: previous
-      before_install:
-        - sudo apt-get update
-        - rvm reinstall 2.3.8 --disable-binary
-      install:
-        - gem install bundler
-        - bundle install
-      script:
-        - bundle exec rake spec
+dist: bionic
+
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y libssl-dev libreadline-dev zlib1g-dev
+
+install:
+  - export PATH="$HOME/.rbenv/bin:$PATH"
+  - eval "$(rbenv init -)"
+  - git clone https://github.com/rbenv/rbenv.git ~/.rbenv
+  - echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
+  - echo 'eval "$(rbenv init -)"' >> ~/.bashrc
+  - exec $SHELL
+  - git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
+  - echo 'export PATH="$HOME/.rbenv/plugins/ruby-build/bin:$PATH"' >> ~/.bashrc
+  - exec $SHELL
+  - rbenv install 2.3.8
+  - rbenv global 2.3.8
+  - gem install bundler
+
+script:
+  - bundle install
+  - bundle exec rake spec
